# AgenticAI-OncallAgent

./: .gitignore  README.md  pyproject.toml
artifacts/: sample-incident-report.md
decisions/: 0001-incident-scorecard.md  0002-bounded-autonomy.md  0003-diagnose-then-act.md  0004-grounded-action.md  0005-escalation.md  0006-evaluation-gate.md  0007-audit-governance.md  0008-build-vs-buy.md
docs/: architecture.md
evals/: README.md  __init__.py  golden_cases.json  golden_runner.py  safety_invariants.py
src/: README.md  __init__.py  action_gate.py  agent.py  incident.py  orchestrator.py  runbook.py
tests/: test_action_gate.py  test_golden.py  test_orchestrator.py  test_runbook.py  test_safety_invariants.py
