[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-oncall"
version = "0.1.0"
description = "Reference slice: a gated two-phase diagnose->act orchestrator for an AI on-call agent."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["src", "evals"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
